Fri Aug 29 17:11:50 2008  Minero Aoki  <aamine@loveruby.net>

	* build.xml: test entry point is now run.sh.

Fri Aug 29 17:04:39 2008  Minero Aoki  <aamine@loveruby.net>

	* test/Makefile: testing entry point is run.sh.

	* test/shunit.sh: add "shunit_" prefix for all internal functions.

	* test/run.sh: load test_*.sh to support multiple test case files.

	* test/run.sh: accept command line arguments as test case files.

	* test/test.sh -> test/test_cbc.sh

	* test/test2.cb -> test/syntax1.cb

	* test/test3.cb -> test/syntax2.cb

	* test/test4.cb -> test/syntax3.cb

Fri Aug 29 16:35:39 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java: should handle
	  global string literal.

	* net/loveruby/cflat/asm/Assembler.java (_long, _quad): should
	  handle label.

	* test/run.sh: new test runner.

	* test/shunit.sh: library function name must not start with
	  "test_" because they are treated as test case definition.

	* test/test.sh: split tests in to multiple functions.

	* test/initializer.cb: test string initializer.

	* test/comm.cb: ditto.

	* test/scomm.cb: ditto.

	* test/slvar.cb: ditto.

	* test/gvar.cb: ditto.

	* test/sgvar.cb: ditto.

	* test/slcomm.cb: : ditto.

Tue Aug 19 19:18:00 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java
	  (generateAssembly): did not set typeTable field.

Tue Aug 19 18:57:52 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java: refactoring: all
	  DSL methods should take a Register argument, not a String.

	* net/loveruby/cflat/compiler/CodeGenerator.java: refactoring:
	  PTRREG -> baseptr().

	* net/loveruby/cflat/asm/Register.java: refactoring: a Register
	  object does not represents size-specified register, it represents
	  generic register.  So we can get a size-specified register object
	  by #forType.

	* net/loveruby/cflat/asm/Register.java: new method #forType.
